@@ -1,34 +1,52 @@
 package com.serjardovic.testapp2.model.images;
 
+import com.serjardovic.testapp2.MyApplication;
+import com.serjardovic.testapp2.interfaces.NetworkListener;
+import com.serjardovic.testapp2.interfaces.NotifyCallback;
+import com.serjardovic.testapp2.network.DownloadImageAsyncTask;
+import com.serjardovic.testapp2.utils.ImageLoader;
 import com.serjardovic.testapp2.utils.L;
 
 import java.util.ArrayList;
+import java.util.LinkedList;
 import java.util.List;
 
-public class ImageInfo {
+public class ImageInfo implements NetworkListener<String> {
 
-    public boolean downloadActive = false;
-    public List<String> downloadQueue;
+    private boolean downloadActive = false;
+    private LinkedList<String> downloadQueue;
+
+    public boolean isDownloadActive() {
+        return downloadActive;
+    }
+
+    public void setDownloadActive(boolean downloadActive) {
+        this.downloadActive = downloadActive;
+    }
+
+    public LinkedList<String> getDownloadQueue() {
+        return downloadQueue;
+    }
 
     public ImageInfo() {
-        downloadQueue = new ArrayList<>();
+        downloadQueue = new LinkedList<>();
     }
 
     public void addImageToQueueEnd(String imageURL) {
         if(!downloadQueue.contains(imageURL)) {
             L.d("Image added to queue end: " + imageURL);
-            downloadQueue.add(imageURL);
+            downloadQueue.addLast(imageURL);
         }
     }
     public void addImageToQueueStart(String imageURL) {
-        if(!downloadQueue.isEmpty() && !downloadQueue.get(0).equals(imageURL)) {
+        if(!downloadQueue.isEmpty() && !downloadQueue.getFirst().equals(imageURL)) {
             L.d("Image added to queue start: " + imageURL);
             downloadQueue.remove(imageURL);
-            downloadQueue.add(0, imageURL);
+            downloadQueue.addFirst(imageURL);
             L.q();
         } else {
             L.d("Image added to queue start: " + imageURL);
-            downloadQueue.add(imageURL);
+            downloadQueue.addFirst(imageURL);
             L.q();
         }
     }
@@ -40,5 +58,43 @@ public class ImageInfo {
         }
     }
 
+    @Override
+    public void onSuccess(String imageURL) {
 
+        downloadActive = false;
+        removeImageFromQueue(imageURL);
+
+        List<Integer> indices = new ArrayList<>();
+        for (int i = 0; i < MyApplication.getInstance().getModel().pageInfo.getPageData().getImages().size(); i++) {
+            if (imageURL.equals(MyApplication.getInstance().getModel().pageInfo.getPageData().getImages().get(i))) {
+                indices.add(i);
+            }
+        }
+
+        for(int i : indices) {
+            MyApplication.getInstance().getCallback().notifyItem(i);
+        }
+
+        if (!downloadQueue.isEmpty() && !downloadActive) {
+            downloadActive = true;
+            new DownloadImageAsyncTask(MyApplication.getInstance(), this).execute(downloadQueue.getFirst());
+        }
+    }
+
+    @Override
+    public void onError(String... error) {
+
+        downloadActive = false;
+        removeImageFromQueue(error[0]);
+
+        if (error.length > 1 && error[1].equals("File not found")) {
+            MyApplication.getInstance().getModel().pageInfo.getPageData().changeImageName(error[0], error[1] + ": " + error[0]);
+        }
+
+        if (!downloadQueue.isEmpty() && !downloadActive) {
+            downloadActive = true;
+            new DownloadImageAsyncTask(MyApplication.getInstance(), this).execute(downloadQueue.getFirst());
+        }
+
+    }
 }
